Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11330

replay-single test_70d: Directory not empty rmdir fails

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.13.0, Lustre 2.12.1
    • Lustre 2.12.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/0b9dcc0a-adf2-11e8-bd05-52540065bddc

      test_70d failed with the following error:

      Started 7681
      rm: cannot remove '/mnt/lustre/d70d.replay-single/test1': Directory not empty
      rmdir fails
      7681 stopped
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      replay-single test_70d - 7681 stopped

            bzzz Alex Zhuravlev
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: